--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+button {
+  cursor: pointer;
+  background-color: rgb(0, 175, 0);
+  color: rgb(247, 228, 228);
+  border: 1px solid rgb(255, 255, 255);
+  width: 80px;
+  height: 40px;
+  border-radius: 20px;
+  margin-top: 3px;
+}
+
+h1 {
   text-align: center;
+  color: rgb(255, 251, 0);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navBar {
+  text-align: center;
+  background-color: rgb(255, 36, 36);
+  width: 100%;
+  height: 200px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flexbox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.flexbox > * {
+  color: rgb(255, 251, 0);
+  flex: 1;
+  margin: 5px;
+}
+.flexbox button:active {
+  background-color: rgb(224, 118, 118);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
